--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
-    <title>TheInfluencetag</title>
+    <title>Hypeitup</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
